--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,12 +5,11 @@
 }
 
 :root {
-  --text: #2D2D2D;
-  --primary: #122E78;
-  --primary-light: #3D5BA9;
-  --secondary: #3B6232;
-  --fill-in: #F3D7AD;
-
+  --text: #2d2d2d;
+  --primary: #122e78;
+  --primary-light: #3d5ba9;
+  --secondary: #3b6232;
+  --fill-in: #f3d7ad;
 }
 
 html {
@@ -23,18 +22,31 @@ a:visited {
   color: var(--text-color);
   text-decoration: none;
 }
-ul, li {
+ul,
+li {
   list-style: none;
 }
 
-body {
-  font-size: 1.4rem;
-  line-height: 2.4rem;
-  color: var(--text-color);
-  font-family: 'Poppins', 'Oswald', Arial, sans-serif;
-  background: #FCFCFC;
+button,
+button:focus {
+  outline: none;
+  border: none;
+  width: max-content;
 }
 
+img {
+  max-width: 100%;
+}
+
+body {
+  font-size: 1.4em;
+  line-height: 1.5;
+  color: var(--text-color);
+  font-family: "Poppins", sans-serif;
+  background: #fcfcfc;
+}
+
+.btn,
 a.btn {
   display: inline-block;
   background: var(--primary-light);
@@ -45,42 +57,52 @@ a.btn {
   -moz-border-radius: 0.25rem;
   -o-border-radius: 0.25rem;
   border-radius: 0.25rem;
-  font-size: 1.8rem;
-  line-height: 2.8rem;
+  font-size: 1em;
+  line-height: 2;
   margin-top: 1.8rem;
   -webkit-transition: 0.3s ease-out;
   -moz-transition: 0.3s ease-out;
   -o-transition: 0.3s ease-out;
   transition: 0.3s ease-out;
-  font-family: 'Oswald';
-  -webkit-box-shadow: 1px 2px 5px 0 rgba(0,0,0,0.1);
-  box-shadow: 1px 2px 5px 0 rgba(0,0,0,0.1);
+  -webkit-box-shadow: 1px 2px 5px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 2px 5px 0 rgba(0, 0, 0, 0.1);
 }
-a.btn:hover {
+.btn:hover {
   background: var(--primary);
 }
 
-.container {
+.wrapper {
   display: block;
   position: relative;
+  max-width: 100rem;
   margin: 0 auto;
-  max-width: 90rem;
   padding: 0 4.6rem;
+}
+
+main {
   background: #fff;
   min-height: 100vh;
-  background: url('./res/fancy-border.svg'), url('./res/fancy-border.svg');
-  background-repeat: repeat-y, repeat-y;
-  background-position: 0% 0%, 100% 0%;
-  background-size: 1.6rem auto;
 }
 nav {
-  padding: 0.8rem 0;
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  padding: 1.2rem 0;
+  z-index: 10;
+}
+nav .wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .logo {
   height: 4.6rem;
+  width: auto;
+}
+.logo img {
+  height: inherit;
   width: auto;
 }
 .navLinks {
@@ -92,39 +114,25 @@ nav {
 .navLinks li a {
   position: relative;
   color: var(--primary);
-  font-size: 1.6rem;
-  line-height: 2.6rem;
-  padding: 0.3rem 0;
-  font-family: 'Oswald';
+  font-size: 1em;
+  line-height: 1.2;
 }
-.navLinks li a:after {
-  content: '';
-  position: absolute;
-  left: -0.3rem;
-  bottom: 0;
-  height: 0.1rem;
-  width: 0;
-  background: var(--primary-light);
-  -webkit-transition: 0.3s ease-in-out;
-  -moz-transition: 0.3s ease-in-out;
-  -o-transition: 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
-}
-.navLinks li a:hover:after {
-  width: calc(100% + 0.6rem);
+.navLinks li a:hover {
+  text-decoration: underline;
 }
 
 header {
-  margin-top: 1.2rem;
+  margin-top: 4.6rem;
   position: relative;
   width: 100%;
   display: block;
-  background: url('./res/landing-image.jpg') no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("./res/landing-image.jpg") no-repeat;
   background-size: cover;
   background-position: center;
 }
 header .headerBox {
-  padding: 12.2rem 3.2rem;
+  padding: 12.2rem 0;
   text-align: center;
 }
 header .title {
@@ -132,7 +140,7 @@ header .title {
   line-height: 6.4rem;
   font-weight: 400;
   color: #fff;
-  font-family: 'Oswald';
+  font-family: "Oswald";
 }
 
 section {
@@ -144,77 +152,8 @@ section .sectionTitle {
   line-height: 3.6rem;
   font-weight: 300;
   color: var(--primary);
-  font-family: 'Oswald';
+  font-family: "Oswald";
 }
-.listItems {
-  margin-top: 1.8rem;
-}
-.listItems ul {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 0 auto;
-  column-gap: 3.2rem;
-  row-gap: 3.2rem;
-}
-.listItems ul li .item {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  row-gap: 0.8rem;
-  padding: 1.2rem;
-  border: 1px solid var(--primary);
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  -o-border-radius: 0.5rem;
-  border-radius: 0.5rem;
-}
-
-.listItems ul li .item figure {
-  display: block;
-  height: 12rem;
-  width: 100%;
-  overflow: hidden;
-}
-.listItems ul li .item figure .thumb {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: 0.4s ease-out;
-  transform: scale(1);
-}
-.listItems ul li .item:hover figure .thumb {
-  transform: scale(1.075);
-}
-.listItems ul li .item .meta {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: 300;
-  font-size: 1.2rem;
-  line-height: 2.2rem;
-}
-.listItems ul li .item .meta .time {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  column-gap: 0.25rem;
-}
-.listItems ul li .item .meta .time span {
-  margin-top: 0.15rem;
-}
-.listItems ul li .item .meta .category {
-  opacity: 0.7;
-}
-.listItems ul li .item .name {
-  line-height: 2.2rem;
-  font-weight: 500;
-}
-.listItems ul li .item:hover .name {
-  text-decoration: underline;
-}
-
 
 footer {
   position: relative;
@@ -222,11 +161,56 @@ footer {
   width: 100%;
   padding: 1.8rem 3.2rem;
   width: 100%;
-  background: #E9E9E9;
-  color: var(--text-color);
+  background: #e9e9e9;
   text-align: center;
   font-size: 1.2rem;
   line-height: 2.2rem;
   font-weight: 300;
-  border-top: 1px solid rgba(0,0,0,0.05);
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.add-recipe-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  max-width: 90rem;
+  margin: 0 auto;
+  row-gap: 1.2rem;
+}
+.add-recipe-form .form-control {
+}
+
+.add-recipe-form .form-control label,
+.add-recipe-form .form-control input {
+  display: block;
+}
+
+.add-recipe-form .form-control label {
+  font-weight: 500;
+}
+
+.add-recipe-form .form-control input {
+  margin-top: 0.8rem;
+  padding: 0.25rem 1rem;
+  font-size: 1em;
+  max-width: 70rem;
+}
+
+.recipes-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: stretch;
+  align-items: flex-start;
+  column-gap: 3.2rem;
+  max-width: 70rem;
+  margin: 8.2rem auto 0 auto;
+}
+
+.recipe-promo {
+}
+.recipe-promo img {
+  width: 100%;
+  aspect-ratio: 3/2;
+  object-fit: cover;
 }
