--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,6 +71,21 @@ a.btn {
   background: var(--primary);
 }
 
+.btn.grey,
+.btn.gray {
+  background: #6e6e6e;
+}
+.btn.grey:hover,
+.btn.gray:hover {
+  background: #5a5a5a;
+}
+.btn.red {
+  background: #914747;
+}
+.btn.red:hover {
+  background: #693131;
+}
+
 .wrapper {
   display: block;
   position: relative;
@@ -121,8 +136,7 @@ nav .wrapper {
   text-decoration: underline;
 }
 
-header {
-  margin-top: 4.6rem;
+.landing-header {
   position: relative;
   width: 100%;
   display: block;
@@ -131,11 +145,11 @@ header {
   background-size: cover;
   background-position: center;
 }
-header .headerBox {
+.landing-header .headerBox {
   padding: 12.2rem 0;
   text-align: center;
 }
-header .title {
+.landing-header .title {
   font-size: 5.6rem;
   line-height: 6.4rem;
   font-weight: 400;
@@ -190,7 +204,8 @@ footer {
   font-weight: 500;
 }
 
-.add-recipe-form .form-control input {
+.add-recipe-form .form-control input,
+.add-recipe-form .form-control textarea {
   margin-top: 0.8rem;
   padding: 0.25rem 1rem;
   font-size: 1em;
@@ -203,14 +218,78 @@ footer {
   justify-content: stretch;
   align-items: flex-start;
   column-gap: 3.2rem;
+  row-gap: 3.2rem;
   max-width: 70rem;
-  margin: 8.2rem auto 0 auto;
+  margin: 0 auto;
+  padding-top: 8.2rem;
 }
 
 .recipe-promo {
+  position: relative;
+  padding: 0.8rem 1.2rem;
+  background: #fff;
+  border: 1px solid rgba(0,0,0,0.1);
 }
-.recipe-promo img {
+.recipe-promo .thumb {
   width: 100%;
   aspect-ratio: 3/2;
   object-fit: cover;
+}
+
+.recipe-promo .tools {
+  position: absolute;
+  top: -1.2rem;
+  right: -1.2rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  column-gap: 0.8rem;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.recipe-promo:hover .tools {
+  visibility: visible;
+  opacity: 1;
+}
+
+.recipe-promo .tools .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.8rem;
+  height: 2.8rem;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  padding: 0;
+  margin: 0;
+  overflow: visible;
+  background: #fff;
+  border: 1px solid rgba(0,0,0,0.1);
+  -webkit-filter: brightness(100%);
+  filter: brightness(100%);
+  -webkit-transition: inherit;
+  -moz-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
+}
+.recipe-promo .tools .btn:hover {
+  -webkit-filter: brightness(95%);
+  filter: brightness(95%);
+}
+.recipe-promo .tools .btn svg {
+  width: 60%;
+  fill: #000;
+}
+
+/* while dev */
+.recipe-promo .desc {
+  height: 8.2rem;
+  overflow: hidden;
 }
