--- a/client/src/App.css
+++ b/client/src/App.css
@@ -230,7 +230,7 @@ footer {
   padding-top: 8.2rem;
 }
 
-.add-recipe-form {
+.add-product-form {
   margin-top: 3.2rem;
   display: grid;
   width: 100%;
@@ -240,29 +240,30 @@ footer {
   column-gap: 1.8rem;
   row-gap: 3.2rem;
 }
-.add-recipe-form .form-control {
+.add-product-form .form-control {
   position: relative;
   display: block;
   width: 100%;
   border: 1px solid red;
   grid-column: span 2;
 }
-.add-recipe-form .form-control.wide {
+.add-product-form .form-control.wide {
   grid-column: span 6;
 }
 
-.add-recipe-form .form-control label,
-.add-recipe-form .form-control input {
+.add-product-form .form-control label,
+.add-product-form .form-control input {
   display: block;
   width: 100%;
 }
 
-.add-recipe-form .form-control label {
+.add-product-form .form-control label {
   font-weight: 500;
 }
 
-.add-recipe-form .form-control input,
-.add-recipe-form .form-control textarea {
+.add-product-form .form-control input,
+.add-product-form .form-control textarea,
+.add-product-form .form-control select {
   padding: 0.5rem 1rem;
   font-size: 1em;
   border: 0.15rem solid var(--primary);
@@ -270,8 +271,9 @@ footer {
   resize: none;
   width: 100%;
 }
-.add-recipe-form .form-control input:focus,
-.add-recipe-form .form-control textarea:focus {
+.add-product-form .form-control input:focus,
+.add-product-form .form-control textarea:focus,
+.add-product-form .form-control select:focus {
   outline: none;
   border: 0.15rem solid var(--primary);
   background: none;
@@ -361,4 +363,33 @@ footer {
 .recipe-promo .desc {
   height: 8.2rem;
   overflow: hidden;
+}
+
+.ingredients-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  column-gap: 1.8rem;
+  row-gap: 1.8rem;
+}
+.ingredient-promo {
+  padding: 0.8rem 1.2rem;
+  border-radius: 0.5rem;
+  border: 1px solid rgba(0,0,0,0.05);
+  background: #fff;
+  text-align: center;
+  min-width: 12rem;
+}
+.ingredient-promo:hover {
+  background: rgb(250,250,250);
+}
+
+.ingredient-promo > strong {
+  color: var(--primary);
+}
+.ingredient-promo span,
+.ingredient-promo span strong {
+  font-size: 1.2rem;
+  font-weight: 300;
 }
