--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,6 +46,15 @@ body {
   background: #fcfcfc;
 }
 
+
+.btn-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: nowrap;
+  column-gap: 1.2rem;
+  padding-top: 0.1rem; /* To align with the input groups, whatever */
+}
 .btn,
 a.btn {
   display: inline-block;
@@ -66,11 +75,14 @@ a.btn {
   transition: 0.3s ease-out;
   -webkit-box-shadow: 1px 2px 5px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 1px 2px 5px 0 rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 .btn:hover {
   background: var(--primary);
 }
-
+.btn.nomargin {
+  margin: 0;
+}
 .btn.grey,
 .btn.gray {
   background: #6e6e6e;
@@ -227,7 +239,7 @@ footer {
 .subpage-wrapper {
   max-width: 90rem;
   margin: 0 auto;
-  padding-top: 8.2rem;
+  padding: 8.2rem 4.6rem;
 }
 
 .add-product-form {
@@ -236,7 +248,7 @@ footer {
   width: 100%;
   justify-content: flex-start;
   align-items: flex-start;
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   column-gap: 1.8rem;
   row-gap: 3.2rem;
 }
@@ -244,11 +256,10 @@ footer {
   position: relative;
   display: block;
   width: 100%;
-  border: 1px solid red;
   grid-column: span 2;
 }
 .add-product-form .form-control.wide {
-  grid-column: span 6;
+  grid-column: span 3;
 }
 
 .add-product-form .form-control label,
@@ -337,6 +348,7 @@ footer {
   -moz-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
+  width: max-content;
   aspect-ratio: 1/1;
   padding: 0;
   margin: 0;
@@ -372,6 +384,7 @@ footer {
   flex-wrap: wrap;
   column-gap: 1.8rem;
   row-gap: 1.8rem;
+  margin-top: 3.2rem;
 }
 .ingredient-promo {
   padding: 0.8rem 1.2rem;
